--- a/index.html
+++ b/index.html
@@ -16,6 +16,31 @@
           class="page-logo"
           alt=""
         />
+        <div id="inputs">
+          <p>
+            <br />
+            <input
+              type="text"
+              id="capa"
+              class="filmeOuSerie"
+              placeholder="Url de ENDEREÇO da imagem, png or jpg"
+            />
+            <br />
+            <input
+              type="text"
+              id="linkVideo"
+              class="filmeOuSerie"
+              placeholder="Link para o trailer"
+            />
+            <br />
+            <input
+              id="button1"
+              type="button"
+              value="Adicionar"
+              onclick="adicionar()"
+            />
+          </p>
+        </div>
         <div id="res"></div>
       </div>
       <a href="https://alura.com.br/" target="_blank">
@@ -26,7 +51,7 @@
         />
       </a>
 
-      <script src="script.js"></script>
+      <script src="aula04.js"></script>
     </section>
   </body>
 </html>
