--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         />
       </a>
 
-      <script src="aula04.js"></script>
+      <script src="script.js"></script>
     </section>
   </body>
 </html>
