--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               type="text"
               id="linkVideo"
               class="filmeOuSerie"
-              placeholder="Link(padrão Youtube) para o vídeo"
+              placeholder="Link para o vídeo(padrão Youtube)!"
             />
             <br />
             <input
